--- a/css/styleaboutme.css
+++ b/css/styleaboutme.css
@@ -15,7 +15,7 @@ html{
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
-    background-image: url('images/firstphoto.JPG');
+    background-image: url('../images/firstphoto.JPG');
     background-color: rgba(255, 255, 255, 0.8);
     background-position: top;
     background-size: cover;
